--- a/coolsite/women/templates/women/base.html
+++ b/coolsite/women/templates/women/base.html
@@ -36,6 +36,7 @@
                 <tr>
                     <!-- Sidebar слева -->
                     <td valign="top" class="left-chapters">
+                        <!--                        {% getcats filter=1 %}-->
                         {% getcats as categories %}
                         <ul id="leftchapters">
                             {% if cat_selected == 0 %}
@@ -44,13 +45,14 @@
                             <li><a href="{% url 'home' %}">Все категории</a></li>
                             {% endif %}
 
-                            {% for c in categories %}
-                            {% if c.pk == cat_selected %}
-                            <li class="selected">{{c.name}}</li>
-                            {% else %}
-                            <li><a href="{{ c.get_absolute_url }}">{{c.name}}</a></li>
-                            {% endif %}
-                            {% endfor %}
+                            <!--                            {% for c in categories %}-->
+                            <!--                            {% if c.pk == cat_selected %}-->
+                            <!--                            <li class="selected">{{c.name}}</li>-->
+                            <!--                            {% else %}-->
+                            <!--                            <li><a href="{{ c.get_absolute_url }}">{{c.name}}</a></li>-->
+                            <!--                            {% endif %}-->
+                            <!--                            {% endfor %}-->
+                            {% show_categories 'name' cat_selected %}
 
                             <li class="share">
                                 <p>Наш канал</p>
