--- a/coolsite/women/templates/women/post.html
+++ b/coolsite/women/templates/women/post.html
@@ -1,10 +1,10 @@
 {% extends 'women/base.html' %}
 
 {% block content %}
-<div class="article-panel">
-    <p class="first">Категория: {{post.cat}}</p>
-    <p class="last">Дата: {{post.time_updated|date:"d-m-Y H:i:s"}}</p>
-</div>
 <h1>{{post.title}}</h1>
-<p>{{post.content}}</p>
+{% if post.photo %}
+<p><img class="img-article-left" src="{{post.photo.url}}" alt="{{post.title}}"></p>
+{% endif %}
+
+{{post.content|linebreaks}}
 {% endblock %}
